--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -37,8 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation platform('com.google.firebase:firebase-bom:28.0.1')
 
     def lifecycle_version = "2.3.0"
     def arch_version = "2.1.0"
@@ -85,4 +86,12 @@ dependencies {
 
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+    implementation 'com.google.firebase:firebase-analytics'
+
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.android.support:multidex:1.0.3'
+
+
 }
+
+apply plugin: 'com.google.gms.google-services'
